[huerta13]: Add new label

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <div class="container my-5">
     <h1 class="text-center">Consulta del Clima</h1>
+    <h2>Hola soy TonoHuerta</h2>
     <form action="procesar.php" method="POST">
         <div class="form-group">
             <label for="ciudad">Ingresa una ciudad:</label>
